Resolve css bugs, minor patch in set visibility form, remove console.logs

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -52,7 +52,7 @@
   font-family: Lato;
   font-style: normal;
   font-weight: normal;
-  color: #b8b8b8;
+  color: #000000;
   width: 55%;
   min-width: 250px;
   height: 3rem;
@@ -395,6 +395,7 @@
 }
 
 .search-title-heading {
+  cursor: pointer;
   font-size: 1.5em;
   font-family: Lato;
   font-weight: bold;
